# elf_bootloader

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  run.sh  rust-toolchain.toml  setup.sh  xtest.txt
.cargo/: config.toml
aarch64_test/src/: lib.rs
alloc/: Cargo.toml
alloc/src/: buddy_allocator.rs  intrusive_linked_list.rs  lib.rs  range_list_allocator.rs
allocator/: Cargo.toml
allocator/src/: buddy_allocator.rs  lib.rs  range_list_allocator.rs
arch_hal/: Cargo.toml
arch_hal/aarch64_hal/: Cargo.toml
arch_hal/aarch64_hal/aarch64_test/: Cargo.toml
arch_hal/aarch64_hal/aarch64_test/src/: lib.rs
arch_hal/aarch64_hal/cpu/src/: lib.rs
arch_hal/aarch64_hal/paging/: Cargo.toml
arch_hal/aarch64_hal/paging/src/: descriptor.rs  lib.rs  registers.rs
arch_hal/aarch64_hal/pl011/: Cargo.toml
arch_hal/aarch64_hal/pl011/src/: lib.rs
arch_hal/aarch64_hal/src/: lib.rs
arch_hal/src/: lib.rs
bootloader/: Cargo.toml  aarch64.lds  build.rs
bootloader/.cargo/: config.toml
bootloader/src/: main.rs  print.rs  systimer.rs
bootloader/src/interfaces/: pl011.rs
dtb/: .gitignore  build.rs
dtb/src/: lib.rs
dtb/test/dts/: reserved_memory.dts  reserved_memory_dynamic.dts
elf/: Cargo.toml
elf/src/: lib.rs
file/: .gitignore  Cargo.toml
file/block-device/: Cargo.toml
file/block-device-api/: Cargo.toml
file/block-device-api/src/: lib.rs
file/block-device/scripts/: run_qemu.sh  test.txt
file/block-device/src/: lib.rs  virtio_blk.rs
file/block-device/src/virtio_blk/: configuration.rs  operation.rs
file/block-device/tests/: virtio_blk_modern.rs
file/file/: Cargo.toml
file/filesystem/: Cargo.toml
file/filesystem/src/: aligned_box.rs  bootsector.rs  filesystem.rs  lib.rs
file/filesystem/src/bootsector/: mbr.rs
file/filesystem/src/filesystem/: fat32.rs
file/filesystem/src/filesystem/fat32/: fat.rs  sector.rs
file/scripts/: hello.txt  run_fat32_virtio_test.sh
file/src/: lib.rs
file/storage/block-device/: Cargo.toml
file/storage/block-device-api/src/: lib.rs
file/storage/block-device/src/: virtio_blk.rs
file/storage/block-device/src/virtio_blk/: operation.rs
file/storage/filesystem/: Cargo.toml
file/tests/: fat32_virtio.rs
intrusive_linked_list/: Cargo.toml
intrusive_linked_list/src/: lib.rs
mutex/: Cargo.toml
mutex/src/: lib.rs
typestate/: Cargo.toml
typestate/src/: bitflags.rs  endianness.rs  lib.rs  read_write.rs  unaligned.rs
typestate_macro/: Cargo.toml
typestate_macro/src/: lib.rs
u-boot/: README.md  boot.txt  flake.nix  init.sh
virtio/: Cargo.toml
virtio/src/: cache.rs  device_type.rs  lib.rs  mmio.rs  queue.rs
xtask/: build.rs
xtask/.cargo/: config.toml
xtask/src/: main.rs
