[workspace]
members = [
    "allocator",
    "bootloader",
    "dtb",
    "mutex",
    "xtask",
    "typestate",
    "typestate_macro",
    "intrusive_linked_list",
    "file",
    "virtio",
    "aarch64_test",
]
build-std-features = ["compiler-builtins-mem"]

[profile.release]
panic = 'abort'
[profile.dev]
panic = 'abort'
