[workspace]
members = [
    "allocator",
    "bootloader",
    "dtb",
    "mutex",
    "xtask",
    "typestate",
    "typestate_macro",
    "intrusive_linked_list",
    "file",
    "virtio",
    "aarch64_test", "elf",
]
build-std-features = ["compiler-builtins-mem"]

[profile.release]
panic = 'abort'
[profile.dev]
panic = 'abort'
