[workspace]
members = [
    "allocator",
    "bootloader",
    "dtb",
    "mutex",
    "xtask",
    "typestate",
    "typestate_macro",
    "intrusive_linked_list",
    "file",
    "virtio",
    "elf",
    "arch_hal",
]
build-std-features = ["compiler-builtins-mem"]

[profile.release]
panic = 'abort'
[profile.dev]
panic = 'abort'
