[package]
name = "elf-hypervisor"
version = "0.1.0"
edition = "2024"

[dependencies]
tock-registers = "0.10.0"
heapless = "0.8.0"
dtb = { path = "../dtb" }
allocator = { path = "../allocator" }
typestate = { path = "../typestate" }
file = { path = "../file" }
elf = { path = "../elf" }

[profile.release]
panic = 'abort'
[profile.dev]
panic = 'abort'
