[package]
name = "file"
version = "0.1.0"
edition = "2024"

[dependencies]
block-device = { path = "block-device" }
block-device-api = { path = "block-device-api" }
filesystem = { path = "filesystem" }
allocator = { path = "../allocator" }

[dev-dependencies]
aarch64_test = { path = "../aarch64_test" }

[lib]
doctest = false

[[test]]
name = "fat32_virtio"
path = "tests/fat32_virtio.rs"
harness = false
